feat: add get shortURL utility

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
-<form action='/URL' method="POST">
+<form action='/' method="POST">
   <div>
     <input type="string" placeholder="Input URL here" name="URL" required>
   </div>
