feat: add shortern URL function

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <form action='/' method="POST">
   <div>
-    <input type="string" placeholder="Input URL here" name="URL" required>
+    <input placeholder="Input URL here" name="url" required>
   </div>
   <button>Shorter</button>
 </form>
