--- a/views/success.hbs
+++ b/views/success.hbs
@@ -1,7 +1,7 @@
 <form method="POST">
   <div>
     <h3>Success! Please use this link:</h3>
-    <a href="{{ URL }}"> {{ URL }} </a>
+    <a href="{{ url }}" target="_blank"> {{ url }} </a>
   </div>
   <div>
     <button>Copy</button>
