feat: add style and copy function

--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,7 +1,5 @@
-<form method="POST">
-  <div>
-    <h3>Error! Can not get the link</h3>
-    <h3>Please check the link is valid or generate the shorter URL first</h3>
-  </div>
-  <a href="/">首頁</a>
-</form>
+<div>
+  <h3>Error! Can not get the link</h3>
+  <h3>Please check the original link is valid or generate the shorter URL first</h3>
+</div>
+<a href="/">首頁</a>
