--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <form action='/' method="POST">
   <div>
-    <input placeholder="Input URL here" name="url" required>
+    <input class="mt-1" placeholder="Input URL here" name="url" required>
   </div>
-  <button>Shorter</button>
+  <button class="mt-2 btn btn-secondary">Shorter</button>
 </form>
