--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>URL shortener</title>
+  <link rel="stylesheet" href="https://bootswatch.com/5/united/bootstrap.min.css">
 </head>
 
 <body>
@@ -15,6 +16,10 @@
       src="https://assets-lighthouse.alphacamp.co/uploads/image/file/16716/ExportedContentImage_00.png">
     {{{body}}}
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <script src="/javascript/copy.js"></script>
 </body>
 
 </html>
